--- a/index.html
+++ b/index.html
@@ -593,250 +593,20 @@
         document.addEventListener('DOMContentLoaded', () => {
             // loadHTML('header.html', 'header-placeholder'); // <- Đã xóa dòng này
             loadHTML('footer.html', 'footer-placeholder');
-            loadMiniBookingWidget(); // Gọi hàm tải widget mini
         });
 
         // (Optional) Add simple fade-in animations on scroll or load
 
     </script>
 
+    <script src="js/script.js"></script>
     <script>
-        // Đảm bảo script này chạy sau khi HTML của header đã được đưa vào DOM
-        // Không cần DOMContentLoaded nữa vì nó đã được tích hợp sẵn
-        // Tuy nhiên, vẫn nên đặt trong DOMContentLoaded của index.html để đảm bảo thứ tự
         document.addEventListener('DOMContentLoaded', function() {
-            console.log("Header script (integrated) loaded and DOM ready.");
-
-            const hamburgerBtn = document.getElementById('npHamburger');
-            const mobileMenu = document.getElementById('npNavMenuMobile');
-            const overlay = document.getElementById('npOverlay');
-            const headerWrapper = document.getElementById('npHeaderWrapper');
-            const bodyEl = document.body;
-            const hamburgerIcon = hamburgerBtn?.querySelector('i');
-
-            if (!hamburgerBtn || !mobileMenu || !overlay || !headerWrapper || !hamburgerIcon) {
-                console.error("Lỗi: Không tìm thấy một hoặc nhiều phần tử DOM cần thiết cho header (integrated).");
-                return;
-            } else {
-                 console.log("Header elements (integrated) found:", { hamburgerBtn, mobileMenu, overlay, headerWrapper, hamburgerIcon });
+            if (typeof window.npInitHeaderMenu === 'function') {
+                window.npInitHeaderMenu();
             }
-
-            let isMenuOpen = false;
-
-            function closeMobileMenu() {
-                if (!isMenuOpen) return;
-                console.log("Closing mobile menu (integrated)...");
-                mobileMenu.classList.remove('np-active');
-                overlay.classList.remove('np-active');
-                hamburgerBtn.setAttribute('aria-expanded', 'false');
-                hamburgerBtn.setAttribute('aria-label', 'Mở menu');
-                hamburgerIcon.classList.remove('fa-times');
-                hamburgerIcon.classList.add('fa-bars');
-                bodyEl.classList.remove('np-menu-open');
-                mobileMenu.addEventListener('transitionend', () => {
-                    if (!mobileMenu.classList.contains('np-active')) {
-                        mobileMenu.setAttribute('hidden', '');
-                        console.log("Mobile menu (integrated) hidden attribute set after transition.");
-                    }
-                }, { once: true });
-                isMenuOpen = false;
-            }
-
-            function openMobileMenu() {
-                if (isMenuOpen) return;
-                console.log("Opening mobile menu (integrated)...");
-                mobileMenu.removeAttribute('hidden');
-                 console.log("Mobile menu (integrated) hidden attribute removed.");
-                requestAnimationFrame(() => {
-                    mobileMenu.classList.add('np-active');
-                    overlay.classList.add('np-active');
-                    hamburgerBtn.setAttribute('aria-expanded', 'true');
-                    hamburgerBtn.setAttribute('aria-label', 'Đóng menu');
-                    hamburgerIcon.classList.remove('fa-bars');
-                    hamburgerIcon.classList.add('fa-times');
-                    bodyEl.classList.add('np-menu-open');
-                    isMenuOpen = true;
-                    console.log("Mobile menu (integrated) .np-active class added.");
-                    mobileMenu.querySelector('a, button')?.focus();
-                });
-            }
-
-            hamburgerBtn.addEventListener('click', (event) => {
-                console.log("Hamburger button (integrated) clicked.");
-                event.stopPropagation();
-                if (isMenuOpen) {
-                    closeMobileMenu();
-                } else {
-                    openMobileMenu();
-                }
-            });
-
-            mobileMenu.addEventListener('click', (event) => {
-                const link = event.target.closest('a');
-                if (link) {
-                    console.log("Link inside mobile menu (integrated) clicked:", link.href);
-                    const href = link.getAttribute('href');
-                    if ((href && href !== '#') || link.classList.contains('np-cta-button-mobile')) {
-                         setTimeout(closeMobileMenu, 150);
-                    }
-                }
-            });
-
-            overlay.addEventListener('click', () => {
-                 console.log("Overlay (integrated) clicked.");
-                closeMobileMenu();
-            });
-
-            document.addEventListener('keydown', (event) => {
-                if (event.key === 'Escape' && isMenuOpen) {
-                    console.log("Escape key (integrated) pressed.");
-                    closeMobileMenu();
-                    hamburgerBtn.focus();
-                }
-            });
-
-            let lastScrollY = window.scrollY;
-            const scrollThreshold = 50;
-            window.addEventListener('scroll', () => {
-                const currentScrollY = window.scrollY;
-                if (headerWrapper) { // Kiểm tra headerWrapper tồn tại
-                    if (currentScrollY > scrollThreshold) {
-                        headerWrapper.classList.add('np-scrolled');
-                    } else {
-                        headerWrapper.classList.remove('np-scrolled');
-                    }
-                }
-                lastScrollY = currentScrollY;
-            }, { passive: true });
-
-             function setActiveMenuItem() {
-                 let currentPath = window.location.pathname;
-                 if (currentPath === '/' || currentPath.endsWith('/index.html') || currentPath.endsWith('/index.php')) {
-                     currentPath = 'index.html';
-                 } else {
-                     currentPath = currentPath.substring(currentPath.lastIndexOf('/') + 1);
-                     if (!currentPath && window.location.pathname !== '/') {
-                         currentPath = window.location.pathname.substring(1);
-                         if (currentPath.endsWith('/')) {
-                             currentPath = currentPath.slice(0, -1);
-                         }
-                     }
-                 }
-                 currentPath = currentPath.split('?')[0].split('#')[0];
-
-                 // Cập nhật selector để chỉ lấy link trong header tích hợp
-                 const menuItems = document.querySelectorAll('.np-header-wrapper .np-nav-link:not(.np-cta-button-mobile)');
-
-                 menuItems.forEach(item => {
-                     item.classList.remove('np-active');
-                     let itemHref = item.getAttribute('href') || '';
-                     if (itemHref === 'index.html' || itemHref === '/' || itemHref === './') {
-                         itemHref = 'index.html';
-                     } else {
-                         itemHref = itemHref.split('?')[0].split('#')[0];
-                         const lastSlashIndex = itemHref.lastIndexOf('/');
-                         if (lastSlashIndex !== -1) { itemHref = itemHref.substring(lastSlashIndex + 1); }
-                         if (itemHref === '' && (item.getAttribute('href') || '').endsWith('/')) {
-                             let fullHref = (item.getAttribute('href') || '').replace('./', '');
-                             if (fullHref.endsWith('/')) { fullHref = fullHref.slice(0, -1); }
-                             itemHref = fullHref.substring(fullHref.lastIndexOf('/') + 1);
-                         }
-                     }
-                     if (itemHref && currentPath && itemHref.toLowerCase() === currentPath.toLowerCase()) {
-                         item.classList.add('np-active');
-                     }
-                 });
-
-                  if (currentPath === 'index.html') {
-                      const homeLinks = document.querySelectorAll('.np-header-wrapper a[href="index.html"], .np-header-wrapper a[href="/"], .np-header-wrapper a[href="./"]');
-                      homeLinks.forEach(link => {
-                          if(link.matches('.np-nav-link') && !link.classList.contains('np-active')) {
-                              link.classList.add('np-active');
-                          }
-                      });
-                  }
-             }
-             setActiveMenuItem();
-             window.addEventListener('hashchange', setActiveMenuItem);
-             window.addEventListener('popstate', setActiveMenuItem);
-             console.log("Header script (integrated) execution finished.");
         });
     </script>
-
-    <!-- START: New script for Mini Booking Widget -->
-    <script>
-        async function loadMiniBookingWidget() {
-            const widgetContainer = document.getElementById('mini-booking-widget');
-            if (!widgetContainer) return;
-
-            const API_BASE_URL = 'https://np-backend-3rgn.onrender.com'; // Use the same API base URL
-            const today = new Date().toISOString().split('T')[0]; // Get today's date in YYYY-MM-DD format
-
-            try {
-                widgetContainer.innerHTML = '<p class="text-gray-500">Đang tải lịch sân...</p>'; // Loading indicator
-
-                const response = await fetch(`${API_BASE_URL}/api/availability?date=${today}`);
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                const data = await response.json();
-
-                if (data && data.courts && data.courts.length > 0) {
-                    let widgetHTML = `<div class="w-full text-left text-sm">`;
-                    widgetHTML += `<h4 class="font-semibold text-center text-gray-700 mb-3">Tình trạng sân ngày ${new Date(today).toLocaleDateString('vi-VN')}</h4>`;
-                    widgetHTML += `<div class="grid grid-cols-1 sm:grid-cols-${data.courts.length} gap-4">`; // Adjust columns based on court count
-
-                    data.courts.forEach(court => {
-                        widgetHTML += `<div class="border rounded p-3 bg-gray-50">`;
-                        widgetHTML += `<h5 class="font-semibold text-center text-blue-700 mb-2">${court.courtName}</h5>`;
-                        widgetHTML += `<ul class="space-y-1">`;
-
-                        // Define key time ranges to display
-                        const keyRanges = [
-                            { label: "Sáng (5h-7h)", start: 5, end: 7 },
-                            { label: "Chiều (17h-19h)", start: 17, end: 19 },
-                            { label: "Tối (19h-21h)", start: 19, end: 21 }
-                        ];
-
-                        keyRanges.forEach(range => {
-                            const availableSlotsInRange = court.slots.filter(slot => {
-                                const slotStartHour = parseInt(slot.startTime.split(':')[0]);
-                                return slot.status === 'available' && slotStartHour >= range.start && slotStartHour < range.end;
-                            });
-
-                            let statusClass = 'text-red-600'; // Default to unavailable/booked
-                            let statusText = 'Hết chỗ';
-                            if (availableSlotsInRange.length > 0) {
-                                statusClass = 'text-green-600';
-                                statusText = `Còn ${availableSlotsInRange.length} suất`;
-                            }
-
-                            widgetHTML += `<li class="flex justify-between items-center text-xs">
-                                            <span class="text-gray-600">${range.label}:</span>
-                                            <span class="font-medium ${statusClass}">${statusText}</span>
-                                         </li>`;
-                        });
-
-                        widgetHTML += `</ul>`;
-                        widgetHTML += `</div>`; // Close court div
-                    });
-
-                    widgetHTML += `</div>`; // Close grid div
-                    widgetHTML += `</div>`; // Close w-full div
-                    widgetContainer.innerHTML = widgetHTML;
-                    widgetContainer.classList.remove('border-dashed', 'text-gray-500', 'items-center', 'justify-center');
-                    widgetContainer.classList.add('border-solid', 'border-gray-200'); // Make border solid
-                } else {
-                    widgetContainer.innerHTML = '<p class="text-orange-600">Không có dữ liệu sân cho ngày hôm nay.</p>';
-                }
-
-            } catch (error) {
-                console.error('Error loading mini booking widget:', error);
-                widgetContainer.innerHTML = `<p class="text-red-600">Lỗi tải lịch sân. Vui lòng thử lại sau hoặc xem trang <a href="dat-san.html" class="underline">Đặt sân</a>.</p>`;
-            }
-        }
-    </script>
-    <!-- END: New script for Mini Booking Widget -->
 
     </body>
 </html>
